src/middleware/snapshots/toker__middleware__cold__tests__the_cold_notice_is_pure_and_byte_pinned.snap
---
source: src/middleware/cold.rs
expression: content
---
[Paused by [toker](https://github.com/passcod/toker) at 08:00: the prompt cache expired after 2h 6m idle, so the next message re-reads 200,621 tokens into the prompt cache. You can:
- `/compact`: pay the re-read once for a small prefix. The proxy would run it on claude-sonnet-5.
- Start a new session: pay nothing, keep none of this context.
- Reply: carry on and pay the re-read.]
