src/middleware/snapshots/toker__middleware__cold__tests__the_held_recap_text_is_plain_and_stable.snap
---
source: src/middleware/cold.rs
expression: RECAP_HELD
---
Recap held by toker: the cache is cold, and a recap would re-read the whole session.
