src/middleware/snapshots/toker__middleware__cold__tests__the_openai_turn_wraps_the_notice_in_both_wire_forms.snap
---
source: src/middleware/cold.rs
expression: text
---
data: {"id":"chatcmpl-toker-cold","object":"chat.completion.chunk","created":2000000000,"model":"z-ai/glm-5.3","choices":[{"index":0,"delta":{"role":"assistant","content":"[Paused by [toker](https://github.com/passcod/toker) at 08:00: the prompt cache expired after 47m idle, so the next message re-reads 200,000 tokens into the prompt cache. You can:\n- `/compact`: pay the re-read once for a small prefix.\n- Start a new session: pay nothing, keep none of this context.\n- Reply: carry on and pay the re-read.]"},"finish_reason":null}]}

data: [DONE]
